mall-swarm/account-admin-service/src/main/k8s/deloyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
  labels:
    app: admin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: dev/account-admin-service:1.0
          ports:
            - containerPort: 8082
      serviceAccountName: mall-server-account
