mall-swarm/account-admin-service/src/main/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: prometheus
  labels:
    app: admin-service
spec:
  selector:
    app: admin
  ports:
    - name: admin-port
      port: 8082
      targetPort: 8082
