mall-swarm/account-admin-service/src/main/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-admin
spec:
  rules:
    - host: adminserver.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 8082
  ingressClassName: nginx
